# gamedev-idle-inhibit

./: LICENSE  README.md  meson.build  meson.options
src/: idle-inhibit.c
systemd/: gamedev-idle-inhibit@.service
udev/: 95-gamedev-idle-inhibit.rules
